--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "name": "webpack-demo",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "private": true,
+    "devDependencies": {
+        "webpack": "^5.11.1",
+        "webpack-cli": "^4.3.1"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
