--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "bugs": {
         "url": "https://github.com/asd0905/webpack-demo-2/issues"
     },
-    "homepage": "https://github.com/asd0905/webpack-demo-2#readme"
+    "homepage": "https://github.com/asd0905/webpack-demo-2#readme",
+    "dependencies": {
+        "loadash": "^1.0.0"
+    }
 }
