--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "webpack-cli": "^4.3.1"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack --watch"
     },
     "repository": {
         "type": "git",
