--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "description": "",
     "private": true,
     "devDependencies": {
+        "@types/lodash": "^4.14.167",
+        "ts-loader": "^8.0.14",
+        "typescript": "^4.1.3",
         "webpack": "^5.11.1",
         "webpack-cli": "^4.3.1"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --watch"
+        "build": "webpack"
     },
     "repository": {
         "type": "git",
