--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "description": "",
     "private": true,
     "devDependencies": {
+        "@babel/cli": "^7.12.10",
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-typescript": "^7.12.7",
         "@types/lodash": "^4.14.167",
         "ts-loader": "^8.0.14",
         "typescript": "^4.1.3",
@@ -14,18 +18,9 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/asd0905/webpack-demo-2.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/asd0905/webpack-demo-2/issues"
-    },
-    "homepage": "https://github.com/asd0905/webpack-demo-2#readme",
     "dependencies": {
+        "babel-loader": "^8.2.2",
+        "core-js": "^3.8.2",
         "loadash": "^1.0.0"
     }
 }
